# fincantatem

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/03_heisenbug/: main.py
examples/04_jax/: main.ipynb  queries.pkl  references.pkl
src/fincantatem/: __init__.py  __main__.py  core.py  ipython_ext.py
src/fincantatem/domain/: aggs.py  constants.py  framework.py  ports.py  values.py  workflows.py
src/fincantatem/lib/: constants.py  theme.py  utils.py
src/fincantatem/lib/cautious/: pii.py  secrets.py
src/fincantatem/lib/framework/: __init__.py
src/fincantatem/lib/framework/jax/: __init__.py  extractor.py  framework.py  helpers.py  types.py
src/fincantatem/lib/ports/: __init__.py  chat.py  cli_env.py  decorator_env.py  display.py  fs.py  inference.py
