[project]
name = "fincantatem"
version = "0.3.3"
description = "Decorator, CLI & IPython extension for LLM-powered exception handling."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "EYFAmqS5", email = "admin.3dox+github729ad0@aguilar.ai" }
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/aguilar-ai/fincantatem"
Repository = "https://github.com/aguilar-ai/fincantatem"
Issues = "https://github.com/aguilar-ai/fincantatem/issues"
Documentation = "https://github.com/aguilar-ai/fincantatem#readme"
Changelog = "https://github.com/aguilar-ai/fincantatem/releases"

[project.optional-dependencies]
pretty = [
    "rich>=14.2.0",
]
cautious = [
    "bip-utils>=2.10.0",
    "detect-secrets>=1.5.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
]
examples = [
    "fastapi[standard]>=0.124.4",
    "pandas>=2.0",
    "requests>=2.28",
]
jax = [
    "jax>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "notebook>=7.5.0",
    "pytest>=9.0.2",
    "twine>=6.2.0",
    "ty>=0.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
